// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
ERROR: (new-parens) /src/tslint/new-parens/test.ts[2, 11]: Parentheses are required when invoking a constructor

======
no error

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
class X {}
const x = new X;

======
class X {}
const x = new X();

>>>>>> after
"
`;
